little change to title

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a >I'm a Coder,<br />
-									Mentor, and Artist</a></h2>
+									<h2>I'm a Coder,<br />
+									Mentor, and Artist</h2>
 									<p>I'm a passionate developer, and I love the world of technology</p>
 								</header>
 								<embed type="application/pdf" src="images/EmilyRobinson_Resume.pdf" width="70%" height="650px">
@@ -101,10 +101,10 @@
 								<article>
 									<header>
 										
-										<h2>SVM</h2>
+										<h2>CART Tree Classifier</h2>
 									</header>
-									<a href="https://github.com/EmilyR102/StarInvader" target="_blank" class="image fit"><img src="images/PyGame_StarInvaders.png" alt="" /></a>
-									<p>Coded a Star Invaders game with PyGame</p>
+									<a href="https://github.com/EmilyR102/ML-Projects/tree/main/ML_CART" target="_blank" class="image fit"><img src="images/ML_CART.png" alt="" /></a>
+									<p>Used boosting, bagging, and CART trees to classify data in this machine learning project</p>
 								</article>
 
 							</section>
