--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2>I'm a Coder,<br />
+									<h2>Coder,<br />
 									Mentor, and Artist</h2>
 									<p>I'm a passionate developer, and I love the world of technology</p>
 								</header>
