--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2>Coder,<br />
-									Mentor, and Artist</h2>
+									<h2>Coder, Mentor,</br> and  Artist</h2>
 									<p>I'm a passionate developer, and I love the world of technology</p>
 								</header>
 								<embed type="application/pdf" src="images/EmilyRobinson_Resume.pdf" width="70%" height="650px">
