removed hyperlink to email

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">err78@cornell.edu</a></p>
+								<p>err78@cornell.edu</p>
 							</section>
 							<section>
 								<h3>Social</h3>
