--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<img src="images/Headshot.jfif" style="border-radius: 50%"">
+						<img src="images/Headshot.jfif" style="border-radius: 50%">
 						<br>
 						<h1>Hi, I'm Emily</h1>
 						<p>This is my portfolio demonstrating my skills and projects</p>
@@ -29,7 +29,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Emily</a></li>
+							<li class="active"><a>This is Emily</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/emilyrcs/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
