updated resume and descriptions

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h2>Coder, Mentor,</br> and  Artist</h2>
-									<p>I'm a passionate developer, and I love the world of technology</p>
+									<p>I'm passionate about developing software that improves people's lives</p>
 								</header>
 								<embed type="application/pdf" src="images/EmilyRobinson_Resume.pdf" width="70%" height="650px">
 							</article>
@@ -124,7 +124,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p>err78@cornell.edu</p>
+								<p>err78+CS@cornell.edu</p>
 							</section>
 							<section>
 								<h3>Social</h3>
