Updated resume and website with new email and project details

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p>err78+CS@cornell.edu</p>
+								<p>emilyr.robinson01+CS@gmail.com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
