Added more projects and updated resume

--- a/index.html
+++ b/index.html
@@ -45,13 +45,31 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h2>Coder, Mentor,</br> and  Artist</h2>
-									<p>I'm passionate about developing software that improves people's lives</p>
+									<p>I'm passionate about telling a story through data and developing software that improves people's lives</p>
 								</header>
 								<embed type="application/pdf" src="images/Emily_Robinson_Resume.pdf" width="70%" height="650px">
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+
+								<article>
+									<header>
+										
+										<h2>Restaurant Recommendation AI</h2>
+									</header>
+									<a href="https://github.com/EmilyR102/AI-Projects/tree/main/restaurant_recommendation" target="_blank" class="image fit"><img src="images/restaurant_recommendation_ai.png" alt="" /></a>
+									<p>AI that returns top restaurant recommendations based on user input</p>
+								</article>
+
+								<article>
+									<header>
+										
+										<h2>GDP Map D3 Project</h2>
+									</header>
+									<a href="https://github.com/EmilyR102/Web-Application-Projects/tree/main/big_projects/welfare" target="_blank" class="image fit"><img src="images/life_expectancy_map.png" alt="" /></a>
+									<p>Designed data visualizations of GDP and life expectancy statistics across different countries using D3 JavaScript library</p>
+								</article>
 
 								<article>
 									<header>
@@ -124,7 +142,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p>emilyr.robinson01+CS@gmail.com</p>
+								<p>emilyr.robinson01@gmail.com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
