updated resume and featured post title and description

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2>Coder, Mentor,</br> and  Artist</h2>
-									<p>I'm passionate about telling a story through data and developing software that improves people's lives</p>
+									<h2>Coder and Mentor</h2>
+									<p>I'm deeply passionate about uncovering intricate patterns within data, crafting innovative applications, and continuously expanding my skill set by exploring new coding languages and frameworks</p>
 								</header>
-								<embed type="application/pdf" src="images/Emily_Robinson_res.pdf" width="70%" height="650px">
+								<embed type="application/pdf" src="images/Emily_Robinson_Resume.pdf" width="70%" height="650px">
 							</article>
 
 						<!-- Posts -->
