--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p>emilyr.robinson01@gmail.com</p>
+								<p>Emily_Robinson15@outlook.com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
